[package]
name = "banglecomm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluest="*"
tokio={version="*", features=["full"]}
futures-util="*"
anyhow="*"
async-trait="*"
rustyline="*"
time="*"
clap={version="*", features=["derive"]}
directories-next="*"
itertools="*"
ical="*"
