[package]
name = "banglecomm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluest="0.6.7"
tokio={version="1.44.2", features=["full"]}
futures-util="0.3.31"
anyhow="*"
async-trait="0.1.88"
rustyline="15.0.0"
time="0.3.41"
clap={version="4.5.37", features=["derive"]}
directories-next="2.0.0"
itertools="0.14.0"
ical="0.11.0"
chrono = "0.4.40"
